--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "budge-tracker",
+    "name": "Bijan Bank",
     "slug": "budge-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
